--- a/src/preferencesdialog.ui
+++ b/src/preferencesdialog.ui
@@ -135,6 +135,11 @@
        <string>er9x - FrSky, NOHT, SPKR</string>
       </property>
      </item>
+     <item>
+      <property name="text">
+       <string>er9x - NMEA</string>
+      </property>
+     </item>
     </widget>
    </item>
    <item row="8" column="1">
